# nebula

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  architecture.md
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.github/: FUNDING.yml
.github/workflows/: cargo_update.yml  core.yml  machete.yml
nebula_cli/: Cargo.toml
nebula_cli/.config/: config.json
nebula_cli/configuration/: base.yaml  default.yaml  dev.yaml
nebula_cli/src/: app.rs  cli-doc.rs  config.rs  main.rs  tui.rs
nebula_cli/src/cli/: bridge.rs  mod.rs  run.rs
nebula_cli/src/components/: home.rs
nebula_cli/src/tui/: action.rs  app.rs  components.rs  config.rs  run.rs
nebula_cli/src/tui/components/: home.rs
nebula_common/: Cargo.toml  build.rs
nebula_common/proto/: nebula.proto
nebula_common/src/: lib.rs
nebula_common/src/api/: list.rs  mod.rs  search.rs  state.rs  sync.rs
nebula_common/src/client/: mod.rs
nebula_common/src/configuration/: cli.rs  dirs.rs  mod.rs  registry.rs  tracing.rs
nebula_common/src/datapackage/: delta.rs  from.rs  mod.rs  parse.rs  pod.rs  validated.rs
nebula_common/src/model/: mod.rs  pb_mapper.rs
nebula_common/src/registry/: endpoints.rs
nebula_common/src/server/: endpoints.rs  metadata_fetchers.rs  mod.rs
nebula_common/src/storage/: data_source.rs  mod.rs  root_folder.rs  sql_db.rs
nebula_registry/: Cargo.toml  build.rs
nebula_registry/configuration/: base.yaml  local.yaml
nebula_registry/data/: Readme.md
nebula_registry/data/cifar10/: datapackage.json
nebula_registry/data/iris/: datapackage.json
nebula_registry/data/mobilenetv3_tf2/: datapackage.json
nebula_registry/proto/: nebula.proto
nebula_registry/src/: main.rs
nebula_tests/: Cargo.toml
nebula_tests/tests/: datapackage.rs  parse.rs
