[workspace]
members = ["nebula_registry", "nebula_cli", "nebula_common", "nebula_tests"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread"] }

tonic = { version = "0.12" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }

dotenvy = { version = "0.15" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
