[workspace]
members = ["nebula_registry", "nebula_cli", "nebula_common", "nebula_tests"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread"] }
tokio-util = "0.7.12"
futures = "0.3.31"

tonic = { version = "0.12" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }

lazy_static = "1.5"
derive_deref = "1.1"
directories = "6.0"
color-eyre = { version = "0.6.3" }

dotenvy = { version = "0.15" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strum = { version = "0.26", features = ["derive"] }

uuid = { version = "1.12", features = ["v4"] }
config = "0.15"
