[package]
name = "nebula_cli"
version = "0.1.0"
edition = "2021"
authors = [
    "Marcus Cvjeticanin <mjovanc@icloud.com>",
    "Tim Janus <tim@janus.rs>",
]
description = "A command line client for machine learning datasets and models at the Nebula registry."
license = "BSD-3-Clause"
repository = "https://github.com/blackportal-ai/nebula"
readme = "../README.md"
rust-version = "1.83.0"
homepage = "https://blackportal.ai"
keywords = ["machine-learning", "ml", "framework", "cli", "datasets"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }

tokio.workspace = true
strum_macros.workspace = true

nebula_common = { path = "../nebula_common", version = "0.1" }
