[package]
name = "nebula_cli"
version = "0.1.0"
edition = "2021"
authors = [
    "Marcus Cvjeticanin <mjovanc@icloud.com>",
    "Tim Janus <tim@janus.rs>",
]
description = "A command line client for machine learning datasets and models at the Nebula registry."
license = "BSD-3-Clause"
repository = "https://github.com/blackportal-ai/nebula"
readme = "../README.md"
rust-version = "1.83.0"
homepage = "https://blackportal.ai"
keywords = ["machine-learning", "ml", "framework", "cli", "datasets"]

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:signal-hook"]

[dependencies]
clap.workspace = true
config.workspace = true
color-eyre.workspace = true
lazy_static.workspace = true
directories.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

derive_deref.workspace = true

tonic.workspace = true
strum.workspace = true

serde.workspace = true
serde_json.workspace = true

nebula_common = { path = "../nebula_common", version = "0.1" }

# dependenciees for ratatui user interface

crossterm = { version = "0.28.1", features = [
    "serde",
    "event-stream",
], optional = true }
ratatui = { version = "0.29.0", optional = true }

signal-hook = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
