[package]
name = "nebula_common"
version = "0.1.0"
edition = "2024"
authors = [
    "Marcus Cvjeticanin <mjovanc@icloud.com>",
    "Tim Janus <tim@janus.rs>",
]
description = "Library Crate with common functionality for the nebula-registry server and the local command line tool."
license = "BSD-3-Clause"
repository = "https://github.com/blackportal-ai/nebula"
readme = "../README.md"
rust-version = "1.85.0"
homepage = "https://blackportal.ai"
keywords = [
    "machine-learning",
    "package-manager",
    "framework",
    "cli",
    "datasets",
]

[dependencies]

tokio.workspace = true
tonic.workspace = true
prost.workspace = true

strum.workspace = true
num_enum.workspace = true

serde.workspace = true
serde_json.workspace = true

uuid.workspace = true
config.workspace = true

tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
http = "1.2"

async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tonic-build = "0.12.3"

[package.metadata.cargo-machete]
ignored = ["prost", "strum"]
