[package]
name = "nebula_tests"
version = "0.1.0"
edition = "2021"
authors = ["Tim Janus <tim@janus.rs>"]
description = "A package manager for machine learning datasets and models."
license = "BSD-3-Clause"
repository = "https://github.com/delta-rs/nebula"
readme = "../README.md"
rust-version = "1.83.0"
homepage = "https://deltaml.org"
keywords = [
    "machine-learning",
    "ml",
    "framework",
    "package-manager",
    "datasets",
]

[dependencies]
nebula_common = { path = "../nebula_common", version = "0.1" }

serde_json.workspace = true
serde.workspace = true
